fix another findbugs warning